[project]
name = "brokerapi"
version = "0.1.07"
description = "Module for managing communication with different API Gateways of different brokers"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Broker", "API"]
authors = [
  {email = "75341718+LichtiMi@users.noreply.github.com"},
  {name = "Michael Lichtenegger"}
]
maintainers = [
  {name = "Michael Lichtenegger", email = "75341718+LichtiMi@users.noreply.github.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
packages = ["brokerapi", "config"]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"
